syntax = "proto3";

option go_package = "github.com/erkrnt/symphony/api";

package api;

message ResponseStatus {
  bool FAILURE = 1;
  bool SUCCESS = 2;
}
